# ew2024-demos

esp32/: .gitignore  CMakeLists.txt
esp32/main/: main.cpp
nRF52840-simple-demo/: CMakeLists.txt  env.bat  prj.conf
nRF52840-simple-demo/boards/: nrf52840dk_nrf52840.overlay
python/sensor-screen-ble/: ble_co2.py  main.py
rpi-led-shim/: .gdbinit  CMakeLists.txt  main.cpp
rpi-led-shim/pimoroni-led-shim/: pimoroni-led-shim.c  pimoroni-led-shim.h
rpi-pico-display-demo/: CMakeLists.txt  ble-co2-display.cpp  openocd-debug.cfg
rpi-pico-display-demo/src/: ble-co2-display.cpp  pimoroni-pico-display-2.cpp
stm32-freertos/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32L476VGTX_FLASH.ld  STM32L476VGTX_RAM.ld  stm32-freertos.ioc  stm32-freertos.txt
stm32-freertos/Core/Inc/: main.h  stm32l4xx_hal_conf.h
stm32-freertos/Core/Src/: main.c  rtos-tasks.cpp  stm32l4xx_hal_msp.c
